initial amendments to site

--- a/_config.yml
+++ b/_config.yml
@@ -2,22 +2,22 @@ url: https://y7kim.github.io
 baseurl: /agency-jekyll-theme/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
+title: Digital Insights Data Consulting
+email: info@digitalinsightsdc.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Sophocles Sophocleous
   pic: 1
-  position: Lead Designer
+  position: Managing Director
   social:
-    - title: twitter
+    - title: linkedin
       url: #
     - title: facebook
       url: #
-    - title: stack-overflow
+    - title: github
       url: #
 
 - name: Larry Parker
@@ -26,7 +26,7 @@ people:
   social:
     - title: twitter
       url: #
-    - title: facebook
+    - title: stack-overflow
       url: #
     - title: linkedin
       url: #
@@ -44,14 +44,14 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
+  - title: linkedin
+    url: http://linkedin.com
   - title: facebook
     url:
   - title: stack-overflow
     url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
+  - title: facebook
+    url: http://facebook.com
   - title: github
     url: http://github.com/jekyll
 
